--- a/flights/templates/search.html
+++ b/flights/templates/search.html
@@ -2,6 +2,22 @@
 
 {% block content %}
 
-{{tt}}, {{cl}}
+<tr>
+    Mã chuyến bay|
+    Hãng|
+    Hành Trình|
+    Ngày khởi hành
+</tr>
+<br>
+{% for schedule in schedules %}
+
+<tr>
+    {{schedule.flId.flId}}|
+    {{schedule.flId.brand.brName}}|
+    {{schedule.flId.fromAp.apName}} to {{schedule.flId.toAp.apName}}
+    |{{schedule.date|date:'Y-m-d'}}   
+ </tr>
+
+{% endfor %}
 
 {% endblock content %}
