--- a/flights/templates/search.html
+++ b/flights/templates/search.html
@@ -1,23 +1,20 @@
-{% extends 'main.html' %}
 
-{% block content %}
+{% if is_search == 1 %}
+    <tr>
+        Mã chuyến bay|
+        Hãng|
+        Hành Trình|
+        Ngày khởi hành
+    </tr>
+    <br>
+    {% for schedule in schedules %}
 
-<tr>
-    Mã chuyến bay|
-    Hãng|
-    Hành Trình|
-    Ngày khởi hành
-</tr>
-<br>
-{% for schedule in schedules %}
+    <tr>
+        {{schedule.flId.flId}}|
+        {{schedule.flId.brand.brName}}|
+        {{schedule.flId.fromAp.apName}} to {{schedule.flId.toAp.apName}}
+        |{{schedule.date|date:'Y-m-d'}}   
+    </tr>
 
-<tr>
-    {{schedule.flId.flId}}|
-    {{schedule.flId.brand.brName}}|
-    {{schedule.flId.fromAp.apName}} to {{schedule.flId.toAp.apName}}
-    |{{schedule.date|date:'Y-m-d'}}   
- </tr>
-
-{% endfor %}
-
-{% endblock content %}
+    {% endfor %}
+{% endif %}
