--- a/templates/main.html
+++ b/templates/main.html
@@ -2,12 +2,8 @@
 
 
 <head>
-    <title>Flights</title>
+    <title>Flight ticket</title>
 </head>
-
-<header>
-    <h1>LOGO</h1>
-</header>
 
 <body>
     
