--- a/flights/templates/index.html
+++ b/flights/templates/index.html
@@ -22,6 +22,7 @@
                         <a class="nav-item active" href="./test.html">Đặt vé</a>
                         <a class="nav-item" href="">Báo cáo</a>
                         <a class="nav-item" href="">Cập nhật chuyến bay</a>
+                        <a class="nav-item" href="{% url 'create_user' %}">Tạo tài khoản</a>
                     </div>
                 </div>
                 
