chinh sua man hinh ds chuyen bay

--- a/flights/templates/index.html
+++ b/flights/templates/index.html
@@ -39,7 +39,7 @@
                             <div class="col-md-4 ml-3">
                                 <div class="input-group mb-3">
                                     <select class="form-select" id="hanghe" name="class">
-                                        <option selected>Hang ghe</option>
+                                        <option selected>Hạng ghế</option>
                                         <option value="economy">Thường</option>
                                         <option value="bussiness">Thương gia</option>
                                     </select>
@@ -48,27 +48,21 @@
                             <div class="col-md-4 ml-3">
                                 <div class="input-group mb-3">
                                     <input class="form-control" type="number" name="seat_number" id="soluong" value="1" min=1 max=20>
-                                    <!-- {% comment %} <select class="form-select" id="soluong" name="soluong">
-                                        <option selected>So Luong</option>
-                                        <option value="1">Mot</option>
-                                        <option value="2">Hai</option>
-                                        <option value="3">Ba</option>
-                                    </select> {% endcomment %} -->
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-3 mb-3">
-                                <label for="diemdi" class="form-label">Diem di</label>
+                                <label for="diemdi" class="form-label">Điểm đi</label>
                                 <select name="from" class="form-control" id="diemdi">
                                     <option selected>Chọn điểm đi</option>
                                     {% for airport in airports %}
-                                        <option value={{airport.idName}}>{{airport.apName}}</option><-->
+                                        <option value={{airport.idName}}>{{airport.apName}}</option>
                                     {% endfor %}
                                 </select>
                             </div>
                             <div class="col-md-3 mb-3">
-                                <label for="diemden" class="form-label">Diem den</label>
+                                <label for="diemden" class="form-label">Điểm đến</label>
                                 <select name="to" class="form-control" id="diemden">
                                     <option selected>Chọn điểm đến</option>
                                     {% for airport in airports %}
@@ -77,20 +71,19 @@
                                 </select>
                             </div>
                             <div class="col-md-3 mb-3">
-                                <label for="ngaydi" class="form-label">Ngay di</label>
+                                <label for="ngaydi" class="form-label">Ngày đi</label>
                                 <input type="date" name="departure_date" class="form-control" id="ngaydi" >
                                 
                             </div>
                             <div class="col-md-3 mb-3">
-                                <label for="ngayden" class="form-label">Ngay ve</label>
+                                <label for="ngayden" class="form-label">Ngày về</label>
                                 <input type="date" name="arrival_date" class="form-control" id="ngayden" >
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12 d-flex">
                                 <button type="submit" class="btn btn-primary mx-auto">Tìm kiếm</button>
-                                <!-- <a type="submit" class="btn btn-primary mx-auto" href="../searchnew.html">Tìm kiếm</a> -->
-                                <!-- {% include 'search.html' %} -->
+        
                             </div>
                         </div>
                     </form>
