--- a/flights/static/assets/css/styte.css
+++ b/flights/static/assets/css/styte.css
@@ -56,7 +56,7 @@ main {
     top: 60%;
     transform:  translate(-50%, -50%) scaleX(-1);
     background-color: #fff;
-    padding: 30px 15px;
+    padding: 31px 15px;
     border-radius: 20px;
 }
 
@@ -66,3 +66,17 @@ main {
 
 
 /* SEARCH  */
+.table {
+    background-color: white;
+    width: 80%;
+    /* left: 15%; */
+    transform:  translate(13%, 0%);
+}
+
+tr {
+    text-align: center;
+  }
+
+  .headsearch{
+    background-color: pink;
+  }
