--- a/flights/templates/login.html
+++ b/flights/templates/login.html
@@ -93,10 +93,16 @@
 
             <label for="password"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="password" id="password">
-            {% if is_not_login == True %}
-            <small>Wrong username or password</small><br>
+
+            {% if messages %}
+            <small class="messages">
+                {% for message in messages %}
+                    {{ message }}
+                    <br>
+                {% endfor %}
+            </small>
             {% endif %}
-            
+           
             <input class="show-psw" type="checkbox" onclick="showPassword() ">Show Password
             
             <input type="submit" class="btn" name="bt" value="Login">
