--- a/flights/templates/customer_form.html
+++ b/flights/templates/customer_form.html
@@ -1,6 +1,6 @@
 <div>
     <form method="POST" action="">
       {% csrf_token %} {{form.as_p}}
-      <input type="Submit" value="Submit" />
+      <input type="Submit" value="Create Customer and Ticket" />
     </form>
 </div>
