fe main index search

--- a/flights/templates/index.html
+++ b/flights/templates/index.html
@@ -21,7 +21,7 @@
             <div class="contaner">
                 <div class="banner">
                     <div class="navbar">
-                        <a class="nav-item active" href="./test.html">Đặt vé</a>
+                        <a class="nav-item active" href={% url "index" %}>Đặt vé</a>
                         <a class="nav-item" href="">Báo cáo</a>
                         <a class="nav-item" href="">Cập nhật chuyến bay</a>
                     </div>
