--- a/flights/templates/update_ticket.html
+++ b/flights/templates/update_ticket.html
@@ -12,7 +12,7 @@
     <input
       required
       type="text"
-      value="{{ticket.flId.flId.fromAp.apName}}-{{ticket.flId.flId.toAp.apName}}-{{ticket.date.date}}"
+      value="{{ticket.schedule.flId.fromAp.apName}}-{{ticket.schedule.flId.toAp.apName}}-{{ticket.schedule.date}}"
       name="schedule"
       list="schedule-list"
     />
