--- a/flights/templates/index.html
+++ b/flights/templates/index.html
@@ -25,7 +25,7 @@
         
         <main>
             <div class="contaner">
-                <div class="banner">
+                <div class="bannerbook">
                     <div class="navbar">
                         <a class="nav-item active" href={% url "index" %}>Đặt vé</a>
                         <a class="nav-item" href="">Báo cáo</a>
