--- a/flights/templates/schedule_detail.html
+++ b/flights/templates/schedule_detail.html
@@ -1,22 +1,53 @@
-<tr>
-    {{flightID}}|
-    {{brName}}|
-    {{fromAp}}({{fromPos}}) to {{toAp}}({{toPos}})|
-    {{time}}|
-    {{firstClassRest}}|
-    {{secondClassRest}}|
-    {{cost}}
-    <br>
-    {% if transitAps.count > 0 %}
-        {% for transitAp in transitAps %}
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
 
-            {{transitAp.apId.apName}} <br>
-            
-        {% endfor %}
-    {% endif %}
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static '/assets/css/styte.css' %}">
+    <title>Document</title>
+</head>
 
 
- </tr>
+<header>
+</header>
+
+<body>
+    <div class="banner banner2">
+        <div class="navbar">
+            <a class="nav-item" href={% url 'index' %}>Đặt vé</a>
+            <a class="nav-item" href="">Báo cáo</a>
+            <a class="nav-item" href="">Cập nhật chuyến bay</a>
+        </div>
+        <form action="" id="form-detail" class="shadow">
+            <tr>
+                {{flightID}}|
+                {{brName}}|
+                {{fromAp}}({{fromPos}}) to {{toAp}}({{toPos}})|
+                {{time}}|
+                {{firstClassRest}}|
+                {{secondClassRest}}|
+                {{cost}}
+                <br>
+                {% if transitAps.count > 0 %}
+                {% for transitAp in transitAps %}
+
+                {{transitAp.apId.apName}} <br>
+
+                {% endfor %}
+                {% endif %}
+                <a href="{% url 'create_customer' pk  %}"> Create Customer</a>
+
+            </tr>
+        </form>
+    </div>
 
 
-<a href="{% url 'create_customer' pk  %}"> Create Customer</a>
+
+</body>
+
+</html>
