--- a/flights/templates/flight_list.html
+++ b/flights/templates/flight_list.html
@@ -1,7 +1,9 @@
 <a href="{% url 'index'  %}">
     <img src="https://cdn-icons-png.flaticon.com/512/0/614.png" width="50px"  alt="" style="border-radius:100%;">
 </a>
-<br>
+<br><br>
+<a href="{% url 'add_flight' %}">Tạo chuyến bay</a>
+<br><br>
 {% for flight in flights %}
     <div>
     Flight ID: {{flight.flId}} | {{flight.fromAp.place}} to {{flight.toAp.place}} | time: {{flight.flTime}} hour(s) | Brand: {{flight.brand.brName}}
