--- a/flights/templates/index.html
+++ b/flights/templates/index.html
@@ -35,27 +35,30 @@
                     <form action="" id="form-search" class="shadow">
                         <div class="row">
                             <div class="col-md-4 ml-3">
-                                <div class="input-group mb-3">
+                                <!-- <div class="input-group mb-3"> -->
+                                    <label for="loaive" class="form-label">Loại vé</label>
                                     <select class="form-select" id="loaive" name="ticket_type">
-                                        <option selected>Loại vé</option>
+                                        <option selected></option>
                                         <option value="one way">Một chiều</option>
                                         <option value="round trip">Khứ hồi</option>
                                     </select>
-                                </div>
+                                <!-- </div> -->
                             </div>
                             <div class="col-md-4 ml-3">
-                                <div class="input-group mb-3">
+                                <!-- <div class="input-group mb-3"> -->
+                                    <label for="loaive" class="form-label">Hạng ghế</label>
                                     <select class="form-select" id="hanghe" name="class">
-                                        <option selected>Hạng ghế</option>
+                                        <option selected></option>
                                         <option value="economy">Thường</option>
                                         <option value="bussiness">Thương gia</option>
                                     </select>
-                                </div>
+                                <!-- </div> -->
                             </div>
                             <div class="col-md-4 ml-3">
-                                <div class="input-group mb-3">
+                                <!-- <div class="input-group mb-3"> -->
+                                    <label for="loaive" class="form-label">Số lượng</label>
                                     <input class="form-control" type="number" name="seat_number" id="soluong" value="1" min=1 max=20>
-                                </div>
+                                <!-- </div> -->
                             </div>
                         </div>
                         <div class="row">
