--- a/flights/templates/customer_form.html
+++ b/flights/templates/customer_form.html
@@ -31,7 +31,7 @@
       <a class="nav-item" href="">Cập nhật chuyến bay</a>
     </div>
     
-    <!-- <form form action="" id="cf" class="shadow">
+    <form form action="" id="cf" class="shadow">
       <div class="row">
         <p class="bold">Thông tin hành khách</p>
       </div>
@@ -44,14 +44,14 @@
         <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
       </div>
       <input type="submit" value="Submit" id="input-submit">
-    </form> -->
-    <div>
+    </form>
+    <!-- <div>
       <form id="cf" method="POST" action="">
         {% csrf_token %} {{form.as_p}}
         <input type="Submit" value="Submit" />
       </form>
     </div>
-  </div>
+  </div> -->
 
 </body>
 
