--- a/flights/templates/main.html
+++ b/flights/templates/main.html
@@ -19,7 +19,7 @@
                     <a class="nav-item" href={% url "index" %}>Đặt vé</a>
                     <a class="nav-item" href="">Báo cáo</a>
                     <a class="nav-item" href="{% url 'flight_list' %}">Chuyến bay</a>
-                    <a class="nav-item" href="{% url 'schedules' %}">Lịch bay</a>
+                    <a class="nav-item" href="{% url 'flight_list' %}">Lịch bay</a>
                     <a class="nav-item" href="{% url 'create_user' %}">Tạo tài khoản</a>
                 </div>
             </div>
