--- a/flights/templates/delete.html
+++ b/flights/templates/delete.html
@@ -1,7 +1,46 @@
-<form method="POST" action="">
-    {% csrf_token %}
-    <p>Are you sure you want to delete "{{obj}}"?</p>
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
 
-    <a href="{{request.META.HTTP_REFERER}}">Go Back</a>
-    <input type="submit" value="Confirm" />
-</form>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static '/assets/css/styte.css' %}">
+    <title>Document</title>
+</head>
+
+
+<header>
+</header>
+
+<body>
+    <div class="banner banner2">
+        <div class="navbar">
+            <a class="nav-item" href={% url "index" %}>Đặt vé</a>
+            <a class="nav-item" href="">Báo cáo</a>
+            <a class="nav-item active" href="{% url 'flight_list' %}">Chuyến bay</a>
+            <a class="nav-item" href="{% url 'flight_list' %}">Lịch bay</a>
+            <a class="nav-item" href="{% url 'create_user' %}">Tạo tài khoản</a>
+        </div>
+
+        <form id="form-update-fl" action="" method="POST">
+            {% csrf_token %}
+            <p>Xác nhận xóa "{{obj}}"?</p>
+            <div class="row">
+                <button href="{{request.META.HTTP_REFERER}}">Trở về </button>
+                <button type="submit" value="Confirm">Xóa</button>
+            </div>
+        </form>
+
+        <script>
+            function notify() {
+                alert("Đã cập nhật thông tin chuyến bay");
+            }
+        </script>
+
+</body>
+
+</html>
