--- a/flights/templates/flight_list.html
+++ b/flights/templates/flight_list.html
@@ -1,14 +1,70 @@
-<a href="{% url 'index'  %}">
-    <img src="https://cdn-icons-png.flaticon.com/512/0/614.png" width="50px"  alt="" style="border-radius:100%;">
-</a>
-<br><br>
-<a href="{% url 'add_flight' %}">Tạo chuyến bay</a>
-<br><br>
-{% for flight in flights %}
-    <div>
-    Flight ID: {{flight.flId}} | {{flight.fromAp.place}} to {{flight.toAp.place}} | time: {{flight.flTime}} hour(s) | Brand: {{flight.brand.brName}}
-    <a href="{% url 'update_flight' flight.flId %}">Cập nhật</a>
-    <a href="{% url 'delete_flight' flight.flId %}">Xóa</a>
-    </div>
-    <br>
-{% endfor %}
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static '/assets/css/styte.css' %}">
+    <title>Document</title>
+</head>
+
+
+<header>
+</header>
+
+<body>
+    <div class="banner banner2">
+        <div class="navbar">
+            <a class="nav-item" href={% url "index" %}>Đặt vé</a>
+            <a class="nav-item" href="">Báo cáo</a>
+            <a class="nav-item active" href="{% url 'flight_list' %}">Chuyến bay</a>
+            <a class="nav-item" href="{% url 'flight_list' %}">Lịch bay</a>
+            <a class="nav-item" href="{% url 'create_user' %}">Tạo tài khoản</a>
+        </div>
+
+        <form form action="" id="form_fl_list" class="shadow">
+            <!-- <a href="{% url 'index'  %}">
+                <img src="https://cdn-icons-png.flaticon.com/512/0/614.png" width="50px" alt=""
+                    style="border-radius:100%;">
+            </a> -->
+            <!-- <br><br> -->
+            <a href="{% url 'add_flight' %}">Tạo chuyến bay</a>
+            <br><br>
+            <table class="table table-bordered table1">
+            <thead>
+                <tr>
+                    <th scope="col">Mã chuyến bay</th>
+
+                    <th scope="col">Nơi đi</th>
+                    <th scope="col">Nơi đến</th>
+                    <th scope="col">Thời gian bay tối thiểu</th>
+                    <th scope="col">Hãng</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for flight in flights %}
+                <tr>
+                    <td>{{flight.flId}}</td>
+                    <td>{{flight.fromAp.place}}</td>
+                    <td>{{flight.toAp.place}}</td>
+                    <td>{{flight.flTime}}</td>
+                    <!-- <td>{{flight.flTime}}</td> -->
+                    <td>{{flight.brand.brName}}</td>
+                    <td><a href="{% url 'update_flight' flight.flId %}">Cập nhật</a></td>
+                    <td><a href="{% url 'delete_flight' flight.flId %}">Xóa</a></td>
+
+                </tr>
+                <!-- <br> -->
+                {% endfor %}
+            </tbody>
+            </table>
+        </form>
+
+</body>
+
+</html>
