--- a/flights/templates/update_flight.html
+++ b/flights/templates/update_flight.html
@@ -1,33 +1,65 @@
-<form action="{% url 'flight_list' %}" method="POST">
-    {% csrf_token %}
-    <h3>Cập nhật chuyến bay số hiệu {{flight.flId}}</h3>
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
 
-    <label>Cập nhật sân bay đi: </label>
-    <input type="text" required list="airport_list" name="fromAp" value="{{flight.fromAp.apName}}">
-    <br><br>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static '/assets/css/styte.css' %}">
+  <title>Document</title>
+</head>
 
-    <label>Cập nhật sân bay đến: </label>
-    <input type="text" required list="airport_list" name="toAp" value="{{flight.toAp.apName}}">
 
-    <datalist id="airport_list">  
+<header>
+</header>
+
+<body>
+  <div class="banner banner2">
+    <div class="navbar">
+      <a class="nav-item" href={% url "index" %}>Đặt vé</a>
+      <a class="nav-item" href="">Báo cáo</a>
+      <a class="nav-item active" href="{% url 'flight_list' %}">Chuyến bay</a>
+      <a class="nav-item" href="{% url 'flight_list' %}">Lịch bay</a>
+      <a class="nav-item" href="{% url 'create_user' %}">Tạo tài khoản</a>
+    </div>
+
+    <form id="form-update-fl" action="{% url 'flight_list' %}" method="POST">
+      {% csrf_token %}
+      <h3>Cập nhật chuyến bay số hiệu {{flight.flId}}</h3>
+
+      <label>Cập nhật sân bay đi: </label>
+      <input type="text" required list="airport_list" name="fromAp" value="{{flight.fromAp.apName}}">
+      <br><br>
+
+      <label>Cập nhật sân bay đến: </label>
+      <input type="text" required list="airport_list" name="toAp" value="{{flight.toAp.apName}}">
+
+      <datalist id="airport_list">
         {% for airport in airports %}
-          <option value="{{airport.apName}}"></option>
+        <option value="{{airport.apName}}"></option>
         {% endfor %}
-    </datalist>
-    <br><br>
+      </datalist>
+      <br><br>
 
-    <label for="flight_time">Thời gian bay (tối thiểu 1): </label>
-    <input type="number" id="flight_time" min="1" required name="flight_time" value="{{flight.flTime}}">
-    <br><br>
+      <label for="flight_time">Thời gian bay (tối thiểu 1): </label>
+      <input type="number" id="flight_time" min="1" required name="flight_time" value="{{flight.flTime}}">
+      <br><br>
 
-    <div class="form__action">
+      <div class="form__action">
         <a class="btn btn--dark" href="{{request.META.HTTP_REFERER}}">Hủy</a>
         <button class="btn btn--main" type="submit" onclick="notify()">Lưu</button>
-    </div>
-</form>
+      </div>
+    </form>
 
-<script>
-    function notify() {
-      alert("Đã cập nhật thông tin chuyến bay");
-    }
-</script>
+    <script>
+      function notify() {
+        alert("Đã cập nhật thông tin chuyến bay");
+      }
+    </script>
+
+</body>
+
+</html>
